--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
         <h1>My Works</h1>
         <div class="portfolio_content">
           <div class="portfolio_content_enver">
-            <a href="https://github.com/ixelin/enver_by_aktan" target=”_blank”>
+            <a
+              href="https://ixelin.github.io/enver_by_aktan/"
+              target="”_blank”"
+            >
               <img src="./assets/logo.png" alt="enver_logo" />
             </a>
             <h2>Enver Layout</h2>
@@ -79,7 +82,10 @@
             </p>
           </div>
           <div class="portfolio_content_snake">
-            <a href="https://github.com/ixelin/snake_totally_by_me" target=”_blank”>
+            <a
+              href="https://ixelin.github.io/snake_totally_by_me/"
+              target="”_blank”"
+            >
               <img src="./assets/logo2.png" alt="snake_game" />
             </a>
             <h2>Snake Game</h2>
@@ -93,9 +99,10 @@
               me to put my coding knowledge to the test, and I am thrilled with
               the final result.
             </p>
+            <span>P.S Added this work as a joke nothing more</span>
           </div>
           <div class="portfolio_content_teamflow">
-            <a href="https://github.com/ixelin/teamflow" target=”_blank”>
+            <a href="https://ixelin.github.io/teamflow/" target="”_blank”">
               <img src="./assets/logo3.png" alt="teamflow_logo" />
             </a>
             <h2>Teamflow Layout</h2>
